--- a/author.html
+++ b/author.html
@@ -35,6 +35,29 @@
         resultElement.textContent = `Correct guesses: ${good} | Wrong guesses: ${oops}`;
     }
 </script>
+<div id="imageContainer">
+    <img id="city" src="Syndey.jpg" width="100" height="100" onclick="selectImage()">
+</div>
+<script>
+        var useImage = 1;
+
+        function selectImage() {
+            switch (useImage) {
+                case 1:
+                    document.getElementById('city').src = 'Amsterdam.jpg';
+                    useImage = 2;
+                    break;
+                case 2:
+                    document.getElementById('city').src = 'Austin2.jpg';
+                    useImage = 3;
+                    break;
+                case 3:
+                    document.getElementById('city').src = 'Syndey.jpg';
+                    useImage = 1;
+                    break;
+            }
+        }
+</script>    
 
 </body>
 </html> 
