--- a/author.html
+++ b/author.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
- <title>Author entry-Revanth Appasani</title>
+ <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Author entry-Revanth Appasani</title>
+ </head>
 <body>
 
 <h1>Author entry - Revanth Appasani</h1>
@@ -30,6 +33,7 @@
             oops++;
             alert("Sorry.");
             console.log("Sorry");
+
         }
         const resultElement = document.getElementById("result");
         resultElement.textContent = `Correct guesses: ${good} | Wrong guesses: ${oops}`;
