--- a/author.html
+++ b/author.html
@@ -2,22 +2,28 @@
 <html>
  <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Author entry-Revanth Appasani</title>
+    <title>Author entry - Appasani Revanth</title>
  </head>
 <body>
-
-<h1>Author entry - Revanth Appasani</h1>
-<h2>Getting input</h2>
-<form>
-    <label for="secretAuthor">The hidden author name:</label>
-    <input type="password" id="secretAuthor" value="Dickens">
-    <br>
-    <label for="guessAuthor">Guess the author:</label>
-    <input type="text" id="guessAuthor">
-    <br>
-    <button type="button" onclick="checkAuthor()">Check the guess</button>
-</form>
-<p>Results: <span id="result"></span></p>
+    <div class="container mt-5">
+        <h1 class="mb-4">Author entry - Appasani Revanth</h1>
+        <h2 class="mb-4">Getting input</h2>
+        <form class="form-group">
+            <label for="secretAuthor" class="form-label">The hidden author name:</label>
+            <input type="password" id="secretAuthor" value="Dickens" class="form-control">
+            <br>
+            <label for="guessAuthor" class="form-label">Guess the author:</label>
+            <input type="text" id="guessAuthor" class="form-control">
+            <br>
+            <button type="button" onclick="checkAuthor()" class="btn btn-primary mt-3">Check the guess</button>
+        </form>
+        <div class="mt-3" id="incorrect-guesses"></div>
+        <p>Results: <span id="result"></span></p>
+        <h3 class="mb-4">Click the image </h3>
+        <div class="container">
+            <img id="img" src="Syndey.jpg" alt="Syndey" onclick="selectImage()" style="height: 100px; width: 100px;">
+        </div>
+    </div>
 
 <script>
     let good = 0;
@@ -44,30 +50,24 @@
         const resultElement = document.getElementById("result");
         resultElement.textContent = `Correct guesses: ${good} | Wrong guesses: ${oops}`;
     }
-</script>
-<div id="imageContainer">
-    <img id="city" src="Syndey.jpg" width="100" height="100" onclick="selectImage()">
-</div>
-<script>
-        var useImage = 1;
-
-        function selectImage() {
-            switch (useImage) {
-                case 1:
-                    document.getElementById('city').src = 'Amsterdam.jpg';
-                    useImage = 2;
-                    break;
-                case 2:
-                    document.getElementById('city').src = 'Austin2.jpg';
-                    useImage = 3;
-                    break;
-                case 3:
-                    document.getElementById('city').src = 'Syndey.jpg';
-                    useImage = 1;
-                    break;
-            }
+    function selectImage(){
+        switch(useImage){
+            case 1:
+                document.getElementById("img").src="Syndey.jpg";
+                useImage++;
+                break
+            case 2:
+                document.getElementById("img").src="Austin2.jpg";
+                useImage++;
+                break
+            case 3:
+                document.getElementById("img").src="Amsterdam.jpg";
+                useImage=1;
+                break
+            default:
         }
-</script>    
+    }
+</script>
 
 </body>
 </html> 
